--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,31 @@
-var
-vendor
-/.env
+/public/build/fonts/glyphicons-*
+/public/build/images/glyphicons-*
 .idea
-node_modules
+###> symfony/framework-bundle ###
+/.env.local
+/.env.*.local
+/public/bundles/
+/public/uploads/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
+
+###> symfony/phpunit-bridge ###
+.phpunit
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> symfony/web-server-bundle ###
+/.web-server-pid
+###< symfony/web-server-bundle ###
+
+###> friendsofphp/php-cs-fixer ###
+/.php_cs
+/.php_cs.cache
+###< friendsofphp/php-cs-fixer ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
