--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -12,6 +12,8 @@ framework:
                 middleware:
                     - App\Messenger\AuditMiddleware
 
+            query.bus: ~
+
         # Uncomment this (and the failed transport below) to send failed messages to this transport for later handling.
         failure_transport: failed
 
@@ -21,13 +23,29 @@ framework:
                 dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
                 retry_strategy:
                     delay: 500
+                options:
+                    exchange:
+                        name: messages
+                        type: direct
+                        default_publish_routing_key: normal
+                    queues:
+                        messages_normal:
+                            binding_keys: [normal]
+
             failed: 'doctrine://default?queue_name=failed'
             # sync: 'sync://'
 
             async_priority_high:
                 dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
                 options:
-                    queue_name: high
+                    exchange:
+                        name: messages
+                        type: direct
+                        default_publish_routing_key: high
+
+                    queues:
+                        messages_high:
+                            binding_keys: [high]
 
         routing:
             # Route your messages to the transports
