--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -48,6 +48,15 @@ framework:
                         messages_high:
                             binding_keys: [high]
 
+            external_messages:
+                dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
+                serializer: App\Messenger\ExternalJsonMessengerSerializer
+                options:
+                    auto_setup: false
+                    queues:
+                        messages_from_external: ~
+
+
         routing:
             # Route your messages to the transports
              'App\Message\Command\AddPonkaToImage': async_priority_high
